--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Devgurus Node.js base project",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test node jasmine-runner.js"
+    "test": "NODE_ENV=test node jasmine-runner.js",
+    "eslint": "eslint modules index.js",
+    "build": "babel modules config index.js -d lib"
   },
   "repository": {
     "type": "git",
@@ -25,8 +27,14 @@
     "winston-papertrail": "^1.0.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.7.5",
+    "babel-preset-es2015": "^6.6.0",
     "chance": "^0.7.7",
     "commander": "^2.8.1",
+    "eslint": "^2.8.0",
+    "eslint-config-airbnb": "^7.0.0",
+    "eslint-plugin-jsx-a11y": "^0.6.2",
+    "eslint-plugin-react": "^4.3.0",
     "jasmine": "^2.3.2",
     "jasmine-spec-reporter": "^2.4.0",
     "restler": "^3.3.0"
