--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,9 @@
   "rules": {
     "no-unused-vars": "warn",
     "no-console": "off",
-    "arrow-body-style": "off"
+    "arrow-body-style": "off",
+    "indent": "warn",
+    "consistent-return": "off",
+    "no-else-return": "off"
   }
 }
