--- a/package.json
+++ b/package.json
@@ -4,41 +4,47 @@
   "description": "Devgurus Node.js base project",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test node jasmine-runner.js",
-    "eslint": "eslint modules index.js",
-    "build": "babel modules config index.js -d lib"
+    "test": "NODE_ENV=test gulp test",
+    "eslint": "eslint app"
   },
   "repository": {
     "type": "git",
     "url": "test"
   },
+  "author": "javi@devgurus.io",
+  "license": "MIT",
+  "devDependencies": {
+    "babel-cli": "^6.10.1",
+    "babel-preset-es2015-node4": "^2.1.0",
+    "chance": "^1.0.3",
+    "commander": "^2.9.0",
+    "eslint": "^2.12.0",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.8.1",
+    "eslint-plugin-jsx-a11y": "^1.4.2",
+    "eslint-plugin-react": "^5.1.1",
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^2.0.0",
+    "gulp-jasmine": "^2.4.0",
+    "gulp-shell": "^0.5.2",
+    "gulp-watch": "^4.3.6",
+    "jasmine": "^2.4.1",
+    "jasmine-reporters": "^2.2.0",
+    "jasmine-spec-reporter": "^2.5.0",
+    "restler": "^3.4.0",
+    "rimraf": "^2.5.2",
+    "run-sequence": "^1.2.1"
+  },
   "dependencies": {
-    "bluebird": "^3.1.1",
-    "core-util-is": "^1.0.2",
+    "bluebird": "^3.4.0",
     "iron_worker": "^0.1.6",
-    "js-yaml": "^3.4.2",
-    "lodash": "^3.10.1",
-    "nconf": "^0.7.2",
-    "request": "^2.65.0",
-    "sphere-node-sdk": "^1.6.0",
+    "js-yaml": "^3.6.1",
+    "lodash": "^4.13.1",
+    "nconf": "^0.8.4",
+    "sphere-node-sdk": "^1.9",
     "underscore": "^1.8.3",
     "underscore-mixins": "^0.1.4",
-    "winston": "^1.0.1",
-    "winston-papertrail": "^1.0.1"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.7.5",
-    "babel-preset-es2015": "^6.6.0",
-    "chance": "^0.7.7",
-    "commander": "^2.8.1",
-    "eslint": "^2.8.0",
-    "eslint-config-airbnb": "^7.0.0",
-    "eslint-plugin-jsx-a11y": "^0.6.2",
-    "eslint-plugin-react": "^4.3.0",
-    "jasmine": "^2.3.2",
-    "jasmine-spec-reporter": "^2.4.0",
-    "restler": "^3.3.0"
-  },
-  "author": "javi@devgurus.io",
-  "license": "ISC"
+    "winston": "^2.2.0",
+    "winston-papertrail": "^1.0.2"
+  }
 }
