--- a/package.json
+++ b/package.json
@@ -26,14 +26,16 @@
     "gulp": "^3.9.1",
     "gulp-eslint": "^2.0.0",
     "gulp-jasmine": "^2.4.0",
+    "gulp-rimraf": "^0.2.0",
     "gulp-shell": "^0.5.2",
     "gulp-watch": "^4.3.6",
+    "gulp-zip": "^3.2.0",
     "jasmine": "^2.4.1",
     "jasmine-reporters": "^2.2.0",
     "jasmine-spec-reporter": "^2.5.0",
     "restler": "^3.4.0",
-    "rimraf": "^2.5.2",
-    "run-sequence": "^1.2.1"
+    "run-sequence": "^1.2.1",
+    "yargs": "^4.7.1"
   },
   "dependencies": {
     "bluebird": "^3.4.0",
