--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.10.1",
+    "babel-core": "^6.11.4",
     "babel-preset-es2015-node4": "^2.1.0",
+    "babel-register": "^6.11.6",
     "chance": "^1.0.3",
     "commander": "^2.9.0",
     "eslint": "^2.12.0",
